# mloq-cookiecutter

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .bumpversion.cfg  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  __pytest.ini  pyproject.toml
{{cookiecutter.repo_name}}/.github/: release-drafter.yml
{{cookiecutter.repo_name}}/.github/workflows/: build.yml  documentation.yml  draft.yml  labeler.yml  tests.yml
{{cookiecutter.repo_name}}/__docs/: _config.yml  _toc.yml  index.md
{{cookiecutter.repo_name}}/docs/: _config.yml  _toc.yml  index.md  references.bib
{{cookiecutter.repo_name}}/docs/api/: index.md
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  cli.py  {{cookiecutter.module_name}}.py
{{cookiecutter.repo_name}}/tests/: test_cli.py  test_{{cookiecutter.module_name}}.py
